tdf#93357 - Display first page as thumbnail in the recent documents view

Display first page as thumbnail in the recent documents view for draw
and impress documents.

Change-Id: Ia69b338b68d5b2a47349b113d4f4f47ee1f1b08f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182479
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>